# xllm_ict

./: .gitignore  .gitmodules  CMakeLists.txt  curl_math_test.sh  launch_xllm.sh  tps_test.sh  utils.py  xLLM_server.sh  xllm_0415_1_1024_32.jsonl  xllm_0415_1_32768_1024.jsonl  xllm_0416_1_1024_32.jsonl  xllm_0416_1_32768_1024.jsonl
benchmark_records/: qwen35_4b_rounds_20260417.md  roundA_build.txt  roundA_curl.json  roundA_launch.txt  roundA_models.json  roundA_tps.txt  roundA_tps_rerun.txt  roundB_build.txt  roundB_curl.json  roundB_tps.txt  roundB_tps_rerun.txt  roundC_build.txt  roundC_curl.txt  roundC_models.json  roundC_tps.txt
core/dit_cache/: fbcache.h
test/: run_msprof_official.sh  run_msprof_official_neo.sh  run_qwen35_32k_case.sh  run_qwen35_32k_perf.sh  run_qwen35_32k_user.sh  xllm 运行.md  xllm0415.md
test/exp_qwen35_32k/case1/: result.jsonl  summary.txt
test/exp_qwen35_32k/case2/: result.jsonl  summary.txt
test/exp_qwen35_32k/case2.5/: result.jsonl  summary.txt
test/exp_qwen35_32k/case2.6/: summary.txt
tools/: qwen35_memopt_sweep.sh
xllm/api_service/: openai_service_test.cpp
xllm/core/distributed_runtime/: llm_engine.cpp
xllm/core/kernels/: ops_api.cpp  ops_api.h  param.h
xllm/core/kernels/npu/: CMakeLists.txt  neo_attention_ops.cpp  npu_ops_api.h  qwen3_gated_delta_net_base.cpp
xllm/core/layers/: qwen3_moe_decoder_layer.cpp
xllm/core/runtime/: acl_graph_executor_test.cpp  cuda_graph_executor_impl.cpp  cuda_graph_executor_impl.h  forward_params.h  forward_shared_memory_manager.cpp  params_utils.cpp  (+1 more)
xllm/proto/: worker.proto
(+19 files in other folders)
